Fixes to color contrast issues.

--- a/docroot/sites/all/themes/ilr_theme/scss/base/_variables.scss
+++ b/docroot/sites/all/themes/ilr_theme/scss/base/_variables.scss
@@ -75,7 +75,7 @@ $army-tent: #bfb778;
 $gray-green: #9fad9f;
 $warm-grey: #d8d2c9;
 $warm-grey-dark: #615a43;
-$dark-gray-orange: #a2998b;
+$dark-gray-orange: #846b41;
 $pink-red: #f7333f;
 
 // In context NOTE add as able
