--- a/docroot/sites/all/themes/ilr_theme/scss/components/_mailchimp.scss
+++ b/docroot/sites/all/themes/ilr_theme/scss/components/_mailchimp.scss
@@ -68,7 +68,7 @@ body.not-front {
 
   //styles originally from mailchimp
   .indicates-required {text-align:right; font-size:11px; margin-right:4%;}
-  .asterisk {color:#e85c41; font-size:150%; font-weight:normal; position:relative; top:5px;}
+  .asterisk {color:#b3170c; font-size:150%; font-weight:normal; position:relative; top:5px;}
   .clear {clear:both;}
 
   div#mce-responses {float:left; top:-1.4em; padding:0em .5em 0em .5em; overflow:hidden; width:90%; margin: 0 5%; clear: both;}
