--- a/docroot/sites/all/themes/ilr_theme/scss/layout/_blog-landing.scss
+++ b/docroot/sites/all/themes/ilr_theme/scss/layout/_blog-landing.scss
@@ -21,6 +21,10 @@ body.mobilizing-against-inequality.subsite-front {
             }
           }
         }
+
+        .news__title h2 {
+          background-color: transparent;
+        }
       }
     }
 
